--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,3 +7,6 @@ analyzer:
 linter:
   rules:
     prefer_const_constructors: false
+    prefer_relative_imports: true
+    constant_identifier_names: false
+    prefer_const_declarations: false
