--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Icons and rating star
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
+  flutter_rating_bar: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
