--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,33 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_rating_bar: ^3.0.1+1
 
+  # internationalization and localization facilities, date/number formatting/parsing
+  intl: ^0.16.1
+
+  # dependency injection
+  get_it: ^4.0.2
+
+  # introduce functional programming in flutter
+  dartz: ^0.9.1
+  
+  # http client for Flutter
+  dio: ^3.0.9
+
+  # open url, phone and others
+  url_launcher: ^5.5.0
+
+  shared_preferences: ^0.5.8
+
+  # mobx
+  mobx:
+  flutter_mobx:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.1.1
+  build_runner: ^1.10.0
+  mobx_codegen: ^1.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
