Implementa a arquitetura para consulta e retorno de todas as categorias cadastradas dentro da aplicação, ainda falta fazer a integração com o MOBX.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,3 +11,4 @@ linter:
     constant_identifier_names: false
     prefer_const_declarations: false
     lowercase_with_underscores: false
+    prefer_collection_literals: false
