--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # geolocator
   geolocator: ^5.3.2+2
 
+  # google auth
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.4.4
+
   # mobx
   mobx:
   flutter_mobx:
