--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
 
   # Icons and rating star
   cupertino_icons: ^0.1.3
-  flutter_svg: 0.17.0
+  flutter_svg: 0.17.3+1
   font_awesome_flutter: ^8.8.1
   flutter_rating_bar: ^3.0.1+1
 
